# Uv_project

project10/: crew1.py  pyproject.toml
project10/src/project10/: __init__.py
