[project]
name = "project10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Uzair", email = "uzairyasin83@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "langchain-google-genai>=2.0.10",
    "streamlit>=1.42.2",
]

[project.scripts]
project10 = "project10:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
